improved security
added route to get user's profile picture based on jwt

changed verifyjwt to decodejwt, verifies the jwt and returns the decoded payload

changed users/courses/sublectures to get userid by jwt instead of params

removed the use of GetUserID from lecture and settings page and navbar

changed goToProfile() function in navbar to use decodejwt route to get user id
